--- a/InfoApp/app/src/main/res/values/strings.xml
+++ b/InfoApp/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">InfoApp</string>
+    <string name="search">搜索</string>
+    <string name="movie">影讯</string>
+    <string name="news">新闻</string>
+    <string name="weather">天气</string>
+    <string name="person">我的</string>
 </resources>
