--- a/InfoApp/app/src/main/res/values/strings.xml
+++ b/InfoApp/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="comment">评论</string>
     <string name="type">输入框框</string>
     <string name="send">发送</string>
+    <string name="account">用户账号</string>
 </resources>
