--- a/InfoApp/app/src/main/res/values/strings.xml
+++ b/InfoApp/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="type">输入框框</string>
     <string name="send">发送</string>
     <string name="account">用户账号</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
