--- a/InfoApp/app/src/main/res/values/strings.xml
+++ b/InfoApp/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">InfoApp</string>
+    <string name="app_name">微硬</string>
     <string name="search">搜索</string>
     <string name="movie">影讯</string>
     <string name="news">新闻</string>
