--- a/InfoApp/app/src/main/res/values/strings.xml
+++ b/InfoApp/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="weather">天气</string>
     <string name="person">我的</string>
     <string name="comment">评论</string>
-    <string name="type">输入框框</string>
+    <string name="type">输入框</string>
     <string name="send">发送</string>
     <string name="account">用户账号</string>
     <!-- TODO: Remove or change this placeholder text -->
