--- a/InfoApp/app/src/main/res/values/strings.xml
+++ b/InfoApp/app/src/main/res/values/strings.xml
@@ -11,4 +11,11 @@
     <string name="account">用户账号</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="city">City</string>
+    <string name="_0_c">0°C</string>
+    <string name="otherinfo">otherInfo</string>
+    <string name="wet">湿度</string>
+    <string name="date">date</string>
+    <string name="futuretemperature">futureTemperature</string>
+    <string name="futureweatherinfo">futureWeatherInfo</string>
 </resources>
